--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>My Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -197,6 +197,29 @@
 																	<h5 class="title">Lead Coding and Machine Learing Lead @ Team Camber Racing	</h5>
 																	<p class="description">
 																		 Worked on the coding of the microcontrollers and sensors on the vehicle , and was also responsible for starting and implementing various machine learning algorithms and computer vision techniques on the driverless project.
+
+																	</p>
+																</div>
+															</div>
+															<!-- end experience section-->
+
+															<!-- start experience section-->
+															<div class="timeline">
+																<div class="icon"></div>
+																<div class="date-content">
+																	<div class="date-outer">
+																		<span class="date">
+																				
+																		<span class="year">25th June 1997</span>
+																		</span>
+																	</div>
+																</div>
+																<div class="timeline-content">
+																	<span class="image main"><img src="images/baby_boss.jpg" width="300"
+																		height="200" alt="" /></a></span>
+																	<h5 class="title">Made My First Cry in this World	</h5>
+																	<p class="description">
+																		 
 
 																	</p>
 																</div>
