--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form  action="https://formspree.io/f/mzbyjewq" method="POST"
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
