--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>My Portfolio</title>
@@ -20,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Hi This is Prakhar</h1>
-								<p>This Website showcases my Projects, Work Experience and All the other Fun Stuff About me.</p>
+								<h1>Hello World, This is Prakhar</h1>
+								<p>A place which showcases my Projects, Work Experience and All the other Fun Stuff About me.</p>
 							</div>
 						</div>
 						<nav>
@@ -291,7 +295,7 @@
 									</ul> -->
 
 									<div class="box1 info">
-										<span class="image main"><a href="https://www.umbc.edu/"><img src="images/UMBCNew.png" width="50"
+										<span class="image main"><a href="https://www.umbc.edu/"><img src="images/UMBC1.png" width="50"
 											height="210" alt="" /></a></span>
 										<h3>University of Maryland Baltimore County,MS in Computer Science</h3>
 										<h4>Baltimore,Maryland | Aug 2021-Present</h4>
@@ -303,7 +307,7 @@
 									</div>
 
 									<div class="box1 info">
-										<span class="image main"><a href="https://www.srmist.edu.in/"><img src="images/SRM (1).jpg" width="50"
+										<span class="image main"><a href="https://www.srmist.edu.in/"><img src="images/SRMIST.png" width="50"
 											height="200" alt="" /></a></span>
 										<h3>SRM Institute of Science and Technology,B.Tech in Computer Science</h3>
 										<h4>Chennai,India | July 2015-May 2019</h4>
