--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>My Portfolio</title>
@@ -33,7 +29,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#project">Projects</a></li>
-								<li><a href="#about">Education</a></li>
+								<li><a href="#education">Education</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -285,7 +281,7 @@
 
 
 						<!-- About -->
-							<article id="about">
+							<article id="education">
 								<h2 class="major">Education</h2>
 								<!-- <span class="image main"><img src="images/UMBC1.png" width="100"
 									height="300" alt="" /></span>
