Added Resume Tab

--- a/index.html
+++ b/index.html
@@ -320,9 +320,15 @@
 								
 							</article>
 
-							<article id="resume">	
-								<h2 class="major">Prakhar's Resume</h2>														
-								<embed src="Docs/Most_Recent_resume.pdf#zoom=FitH" width="100%" height="780px" />
+							<article id="resume">
+								<h2 class="major">Prakhar's Resume</h2>	
+								<div class="columns download">
+									<p>
+										<a href="Docs/Most_Recent_resume.pdf" download class="button1"><i class="fa fa-download"></i>Download CV</a>
+											
+										</a> 
+									</p>
+								 </div>
 							</article>
 
 						<!-- Contact -->
