--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 								<h2 class="major">Prakhar's Resume</h2>
 								<div class="columns download">
 									<p>
-										<a href="Docs/Resume_Latest_V2 (1).pdf" download class="button1"><i class="fa fa-download"></i>Download CV</a>
+										<a href="Docs/Updated_latest_resume.pdf" download class="button1"><i class="fa fa-download"></i>Download CV</a>
 
 										</a>
 									</p>
